--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -16,12 +16,12 @@
         <li><a href="#2" class="a1">SERVICES</a></li>
         <li><a href="#3" class="a1">SHOPPING</a></li>
         <li><a href="#5" class="a1">CART</a></li>
-    </ul><br><br>
+    </ul><br><br><div>
     <div class="main0">
-        <h1 class="h1">
+        <h1 style="font-size: 50px; padding-left: 75px; color: white;">
             WELCOME {User-name} TO KHHaS SERVICES.
         </h1>
-        <h3 class="h2">
+        <h3 style="font-size: 65px; padding-left: 75px; color:#0FFCBE;">
             HOW MAY I HELP YOU?
         </h3>
     </div>
@@ -76,9 +76,9 @@
         Choose the home service what you need as per the requirement its very easy to navigate on city Delhi.<br>
         After choosing the required services go head and choose your location in Delhi, where you need the service so <b>KHHas</b> on the basis of your location fetch the nearest professional so you can get service instantly with relevant cost.<br>
         After putting the location you need to put your personal details so professional can reach easily and fix schedule with you for the service you need.<br><br><br>
-    </p>
+    </p></div>
     <footer>
         <p>Copyright &#169 KHaaS Services <script>document.write(new Date().getFullYear());</script></p>
     </footer>
 </body>
-    </html>
+</html>
