--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
+    <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header1">
@@ -16,40 +18,41 @@
         <li><a href="#2" class="a1">SERVICES</a></li>
         <li><a href="#3" class="a1">SHOPPING</a></li>
         <li><a href="#5" class="a1">CART</a></li>
-    </ul><br><br><div>
+    </ul>
     <div class="main0">
-        <h1 style="font-size: 50px; padding-left: 75px; color: white;">
+        <h1 style="color: white;">
             WELCOME {User-name} TO KHHaS SERVICES.
         </h1>
-        <h3 style="font-size: 65px; padding-left: 75px; color:#0FFCBE;">
+        <h3 style="color:#0FFCBE;">
             HOW MAY I HELP YOU?
         </h3>
     </div>
-    <h1 style="text-align: center; color: white;">Here are the Services We Provide, Only for you!!!</h1>
+    <div><h1 style="text-align: center; color: white;">Here are the Services We Provide, Only for you!!!</h1>
     <br><div class="main1">
-        <a href="#" class="a2" id="links"></a>
-        <a href="#" class="a3" id="links"></a>
-        <a href="#" class="a4" id="links"></a>
-        <a href="#" class="a5" id="links"></a>
-        <a href="#" class="a6" id="links"></a>
-        <a href="#" class="a7" id="links"></a>
+        <img src="ac.jpg" href="#" class="a2" id="links"></a>
+        <img src="bathtub.jpg" href="#" class="a3" id="links"></a>
+        <img src="car.jpg" href="#" class="a4" id="links"></a>
+        <img src="carpet.jpg" href="#" class="a5" id="links"></a>
+        <img src="chair.jpg" href="#" class="a6" id="links"></a>
+        <img src="chimney.jpg" href="#" class="a7" id="links"></a>
     </div><br>
     <div class="main1">
-        <a href="#1" class="a8" id="links"></a>
-        <a href="#1" class="a9" id="links"></a>
-        <a href="#1" class="a10" id="links"></a>
-        <a href="#1" class="a11" id="links"></a>
-        <a href="#1" class="a12" id="links"></a>
-        <a href="#1" class="a13" id="links"></a>
+        <img src="deep_cleaning.jpg" href="#" class="a8" id="links"></a>
+        <img src="electrician.jpg" href="#" class="a9" id="links"></a>
+        <img src="fridge.jpg" href="#" class="a10" id="links"></a>
+        <img src="geyser.jpg" href="#" class="a11" id="links"></a>
+        <img src="sanitization.jpg" href="#" class="a12" id="links"></a>
+        <img src="kitchen.jpg" href="#" class="a13" id="links"></a>
     </div><br>
     <div class="main1">
-        <a href="#1" class="a14" id="links"></a>
-        <a href="#1" class="a15" id="links"></a>
-        <a href="#1" class="a16" id="links"></a>
-        <a href="#1" class="a17" id="links"></a>
-        <a href="#1" class="a18" id="links"></a>
-        <a href="#1" class="a19" id="links"></a>
+        <img src="mattress.jpg" href="#" class="a14" id="links"></a>
+        <img src="microwave.jpg" href="#" class="a15" id="links"></a>
+        <img src="sofa.jpg" href="#" class="a16" id="links"></a>
+        <img src="plumber.jpg" href="#" class="a17" id="links"></a>
+        <img src="washing machine.jpg" href="#" class="a18" id="links"></a>
+        <img src="water tank.jpg" href="#" class="a19" id="links"></a>
     </div>
+    <h2 style="text-align: center; color: #fff;">Our Partners</h2>
     <div class="main2">
         <a><img src="https://d2dgt4tr79mk87.cloudfront.net/manufacturer/Ababeel-Leathers-185x88.png"></a>
         <a><img src="https://d2dgt4tr79mk87.cloudfront.net/manufacturer/2017-10-12-185x88.png"></a>
@@ -58,13 +61,12 @@
     </div>
     <div class="main3">
         <h1 style="text-align: center; color: white;">Why Choose KHHaS?</h1><br>
-        <ul type="disc" style="display: table-column;">
-            <li>On Demand Scheduled</li>
+            <ol><li>On Demand Scheduled</li>
             <li>Verified Partners</li>
             <li>Service Warranty</li>
             <li>Online Payments</li>
             <li>24/7 Online Support</li>
-        </ul>
+        </ol>
     </div>
     <h2 style="text-align: center; color: white; font-size: 45px;">
         Hire Professional Home Service Experts in Delhi
