--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="header1">
-        <img src="logo.jpg" width="100px" height="75px" style="margin-left: 6%;">
+        <img src="logo.jpg" alt="logo" width="100px" height="75px" style="margin-left: 6%;">
         <input type="text" placeholder="Search here..." name="search" class="search">
-        <button class="button1">Login</button>
+        <a href="#" class="button1">Login</a>
     </div><br><br><br>
     <ul>
         <li><a href="#1" class="a1">HOME</a></li>
@@ -21,12 +21,12 @@
     </ul>
     <div class="main0">
         <h1 style="color: white;">
-            WELCOME {User-name} TO KHHaS SERVICES.
+            WELCOME User TO KHHaS SERVICES.
         </h1>
-        <h3 style="color:#0FFCBE;">
-            HOW MAY I HELP YOU?
-        </h3>
     </div>
+    <h3 class="typing">
+        HOW MAY I HELP YOU ?
+    </h3>
     <div><h1 style="text-align: center; color: white;">Here are the Services We Provide, Only for you!!!</h1>
     <br><div class="main1">
         <img src="ac.jpg" href="#" class="a2" id="links"></a>
@@ -80,6 +80,13 @@
         After putting the location you need to put your personal details so professional can reach easily and fix schedule with you for the service you need.<br><br><br>
     </p></div>
     <footer>
+        <img src="logo.jpg" align='center' width="100px" height="75px"><h3>KHaaS Services</h3>
+        <p>KHaaS connects Delhi residents with trusted home service professionals, offering quick, quality services at fair rates. It's the simple way to access reliable help across the city.</p>
+        <h3>Follow Us</h3>
+        <a href="#"><img src='https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png' alt="Instagram" width="30px"></a>
+        <a href="#"><img src='https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png' alt="Instagram" width="30px"></a>
+        <a href="#"><img src='https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png' alt="Instagram" width="30px"></a>
+        <a href="#"><img src='https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png' alt="Instagram" width="30px"></a>
         <p>Copyright &#169 KHaaS Services <script>document.write(new Date().getFullYear());</script></p>
     </footer>
 </body>
