--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <li><a href="#3" class="a1">SHOPPING</a></li>
         <li><a href="#5" class="a1">CART</a></li>
     </ul>
+
+    <a href="customer_dashboard.html">Customer Dashboard</a>
     <div class="main0">
         <h1 style="color: white;">
             WELCOME User TO KHHaS SERVICES.
