--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li><a href="#5" class="a1">CART</a></li>
     </ul>
 
-    <a href="customer_dashboard.html">Customer Dashboard</a>
+    <a href="templates/customer_dashboard.html">Customer Dashboard</a>
     <div class="main0">
         <h1 style="color: white;">
             WELCOME User TO KHHaS SERVICES.
